<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:minWidth="1000dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="@dimen/five_dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:gravity="center"
                android:orientation="vertical">

                <com.androidlib.CustomFontViews.CustomTextviewRegular
                    android:id="@+id/selectCameraTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:maxLines="2"
                    android:padding="@dimen/fifteen_dp"
                    android:text="@string/camera"
                    android:textColor="@color/mdtp_white"
                    android:textSize="@dimen/eighteen_sp"
                     />

                <com.androidlib.CustomFontViews.CustomTextviewRegular
                    android:id="@+id/selectGalleryTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:maxLines="2"
                    android:padding="@dimen/fifteen_dp"
                    android:text="@string/gallery"
                    android:textColor="@color/mdtp_white"
                    android:textSize="@dimen/eighteen_sp"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="@dimen/five_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            card_view:cardUseCompatPadding="true">

            <com.androidlib.CustomFontViews.CustomTextviewRegular
                android:id="@+id/cancelTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mdtp_white"
                android:gravity="center"
                android:maxLines="2"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/eighteen_sp"
                />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>